# theoriginals-cyphra

./: .gitignore  README.md
business-website/: cash-flow-detailed.html  competitive-detailed.html  exit-strategy-detailed.html  expenses-detailed.html  financials-detailed.html  index.html  metrics-detailed.html  revenue-detailed.html  risks.html  startup-costs-detailed.html
business-website/css/: style.css
business-website/js/: charts.js  currency-converter.js  main.js
cyphra-android/: gradlew.bat  settings.gradle.kts
cyphra-android/app/: build.gradle.kts
cyphra-android/gradle/: libs.versions.toml
cyphra-pwa/: api.js  app.js  crypto.js  generate-icons.js  index.html  manifest.json  package-lock.json  server.js  sw.js  websocket.js
cyphra-wasm/: Cargo.toml
cyphra-wasm/pkg/: cyphra_wasm.d.ts  package.json
cyphra-wasm/src/: lib.rs
documentation/: CYPHRA_COMPLETE_TECHNICAL_DOCUMENT.md  CYPHRA_TECHNOLOGY_STACK.md  cyphra_cryptography_spec.md
machine_learning/: retrain_gpu.py
machine_learning/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
machine_learning/documentation/: DATASET-COMBINATION-DOCUMENTATION.docx  DATASET-PREPROCESSING-DOCUMENTATION.docx  MODEL-TRAINING-DOCUMENTATION.docx
machine_learning/ghostml_library/: Cargo.toml
machine_learning/ghostml_library/ghost-core/: Cargo.toml
machine_learning/ghostml_library/ghost-core/src/: activations.rs  error.rs  lib.rs  losses.rs  matrix.rs  metrics.rs  optimizers.rs  types.rs
machine_learning/ghostml_library/ghost-ensemble/: Cargo.toml
machine_learning/ghostml_library/ghost-ensemble/src/: gradient_boosting.rs  lib.rs  random_forest.rs
machine_learning/ghostml_library/ghost-neural/: Cargo.toml
machine_learning/ghostml_library/ghost-neural/src/: layers.rs  lib.rs  mlp.rs
machine_learning/ghostml_library/ghost-optimizer/: Cargo.toml
machine_learning/ghostml_library/ghost-optimizer/src/: grid_search.rs  lib.rs  random_search.rs
machine_learning/ghostml_library/ghost-preprocessing/: Cargo.toml
machine_learning/ghostml_library/ghost-preprocessing/src/: encoders.rs  feature_selection.rs  lib.rs  scalers.rs  splitters.rs
machine_learning/ghostml_library/ghost-python/: Cargo.toml
machine_learning/ghostml_library/ghost-python/ghostml/: ghostml.cp313-win_amd64.pyd  pyvenv.cfg
machine_learning/ghostml_library/ghost-python/ghostml/Scripts/: activate  activate.bat
machine_learning/ghostml_library/ghost-python/src/: lib.rs
machine_learning/ghostml_library/ghost-sampling/: Cargo.toml
machine_learning/ghostml_library/ghost-sampling/src/: lib.rs  oversampling.rs  smote.rs  undersampling.rs
machine_learning/ghostml_library/ghost-trees/: Cargo.toml
machine_learning/ghostml_library/ghost-trees/src/: decision_tree.rs  decision_tree_regressor.rs  lib.rs  node.rs  splitter.rs
machine_learning/ghostml_library/scripts/: 01_combine_datasets.py  01a_combine_datasets_part1.py  01a_combine_datasets_part1_FIXED.py  01b_combine_datasets_part2.py  01c_merge_all_parts.py  02_preprocess_dataset.py  03_train_model.py  gpu_utils.py  test_ghostml_import.py
machine_learning/inference_service/: demo_attacks.py  main.py  packet_capture.py  requirements.txt  response_engine.py  start.bat  test_all.py
machine_learning/models/: MLP_Deep_metrics.pkl  XGB_Balanced_metrics.pkl  XGB_Deep_metrics.pkl  combined_metadata.pkl  ensemble_results.pkl  meta_learner.pkl  stacking_meta_model.pkl
machine_learning/models_old/: MLP_Deep.pth  ensemble_results.json  preprocessing_metadata.pkl  scaler.pkl
machine_learning/training_scripts/: 01_combine_datasets.py  02_preprocess_dataset.py  (+6 more)
rust-libraries/: Cargo.toml  IN-HOUSE-BUILD-GUIDE.md
rust-libraries/ai/: Cargo.toml
rust-libraries/ai/src/: adaptive_policy.rs  anomaly_detector.rs  bandit.rs  feature_engineering.rs  gbdt_engine.rs  lib.rs  model_converter.rs  threat_scorer.rs
rust-libraries/backend/: Cargo.toml
rust-libraries/backend/src/: authentication.rs  lib.rs  rate_limiter.rs
rust-libraries/backend/src/hsm/: mod.rs
rust-libraries/backend/src/key_distribution/: mod.rs  prekey_store.rs  revocation.rs  server.rs
rust-libraries/backend/src/mailbox/: mod.rs  server.rs  storage.rs
rust-libraries/core/: Cargo.toml
rust-libraries/core/src/: constants.rs  crypto_utils.rs  error.rs  lib.rs  types.rs
rust-libraries/docs/: android-integration.md  ios-integration.md  web-integration.md
rust-libraries/mixnet/: Cargo.toml
rust-libraries/mixnet/src/: batching.rs  lib.rs  relay.rs  routing.rs  sphinx.rs
rust-libraries/network/: Cargo.toml
rust-libraries/network/src/: adaptive_shaper.rs  feature_extractor.rs  flow_tap.rs  lib.rs  timing_obfuscator.rs  traffic_shaper.rs
rust-libraries/protocol/: Cargo.toml
rust-libraries/protocol/src/: double_ratchet.rs  group.rs  header_encryption.rs  hybrid_kem.rs  lib.rs  message.rs  prekey_store.rs  x3dh.rs
rust-libraries/scripts/: build-all.sh  build-dist.sh
rust-libraries/server/: Cargo.toml  start.bat  test_all.py
rust-libraries/server/src/: main.rs  state.rs
rust-libraries/server/src/routes/: ai.rs  crypto.rs  db.rs  health.rs  mod.rs
rust-libraries/storage/: Cargo.toml
rust-libraries/storage/src/: crypto_erase.rs  encrypted_db.rs  key_hierarchy.rs  keystore_integration.rs  lib.rs  memory_sanitization.rs  secure_file.rs
scripts/: accept_licenses.bat  build_and_install.bat  capture_build.bat  demo.bat  demo_soc_doc.py  fix_quotes.py  get_errors.bat  install_sdk.bat  restart_backend.bat  start_backend.bat  test_port.ps1
veddb-cyphra/: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md
veddb-cyphra/benches/: benchmarks.rs
veddb-cyphra/docs/: README.md  cli.md  configuration.md  installation.md  library.md  overview.md  troubleshooting.md
veddb-cyphra/examples/: basic.rs  basic_usage.rs  performance_benchmark.rs  pooling.rs  pubsub.rs  test_script.rs
veddb-cyphra/src/: connection.rs  error.rs  lib.rs  types.rs
veddb-cyphra/tests/: integration_test.rs
web-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+60 files in other folders)
