[package]
name = "cyphra-wasm"
version = "1.0.0"
edition = "2021"
authors = ["CYPHRA Team"]

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.2", features = ["js"] }

# Pure-Rust crypto (WASM-compatible — no C FFI)
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["getrandom", "static_secrets"] }
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
rand = { version = "0.8", features = ["getrandom"] }
rand_core = { version = "0.6", features = ["getrandom"] }
base64 = "0.22"
hex = "0.4"

[profile.release]
opt-level = "s"   # optimise for size (important for WASM)
lto = true
