[workspace]
members = [
    "core",
    "protocol",
    "ai",
    "network",
    "storage",
    "backend",
    "mixnet",
    "server",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["CYPHRA Team"]
license = "MIT"
repository = "https://github.com/your-org/CYPHRA"

[workspace.dependencies]
# Post-Quantum Cryptography
liboqs-sys = "0.10"

# Classical Cryptography
libsodium-sys = "0.2"
openssl = "0.10"

# Hashing
blake3 = "1.5"
sha3 = "0.10"

# Secure Random
getrandom = "0.2"

# Networking
tokio = { version = "1.35", features = ["full"] }
quinn = "0.10"
hyper = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
criterion = "0.5"

# HTTP framework (for server crate)
axum = { version = "0.7", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
