[workspace]
members = [
    "ghost-core",
    "ghost-preprocessing",
    "ghost-sampling",
    "ghost-trees",
    "ghost-ensemble",
    "ghost-neural",
    "ghost-optimizer",
    "ghost-python",
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["GhostML Team - Built to Destroy Doubters"]
license = "MIT"
repository = "https://github.com/ghostml/ghostml"

[workspace.dependencies]
# High-performance numerical computing
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-rand = "0.14"
ndarray-stats = "0.5"

# Parallel processing
rayon = "1.8"
num_cpus = "1.16"

# Random number generation
rand = "0.8"
rand_distr = "0.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and profiling
tracing = "0.1"
tracing-subscriber = "0.3"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"

# Optimization
ordered-float = "4.1"
num-traits = "0.2"
