[package]
name = "cyphra-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cyphra-core = { path = "../core" }
cyphra-protocol = { path = "../protocol" }
tokio = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
rusqlite = { workspace = true }
blake3 = { workspace = true }
getrandom = { workspace = true }
