[package]
name = "cyphra-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cyphra-core = { path = "../core" }
tokio = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
blake3 = { workspace = true }
libsodium-sys = { workspace = true }
getrandom = { workspace = true }
hex = "0.4"
