[package]
name = "ghost-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
ndarray-stats = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
ordered-float = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
approx = { workspace = true }
