[package]
name = "ghost-ensemble"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ghost-core = { path = "../ghost-core" }
ghost-trees = { path = "../ghost-trees" }
ndarray = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
