[package]
name = "ghost-optimizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ghost-core = { path = "../ghost-core" }
ndarray = { workspace = true }
rayon = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
